Integration with TravisCI

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "satooshi/php-coveralls": "^2.0",
         "symfony/dotenv": "^4.1",
         "symfony/phpunit-bridge": "^4.1"
     },
@@ -57,7 +58,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "test": "php ./bin/phpunit",
+        "cover": "php ./bin/phpunit --coverage-clover ./var/phpunit/clover.xml ./tests",
+        "coveralls": "php ./vendor/bin/coveralls -v --exclude-no-stmt"
     },
     "conflict": {
         "symfony/symfony": "*"
