--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "satooshi/php-coveralls": "^2.0",
+        "php-coveralls/php-coveralls": "^2.1",
         "symfony/dotenv": "^4.1",
         "symfony/phpunit-bridge": "^4.1"
     },
