--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,13 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.1",
         "symfony/dotenv": "^4.1",
+        "symfony/maker-bundle": "^1.5",
         "symfony/phpunit-bridge": "^4.1"
     },
     "config": {
