--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php-coveralls/php-coveralls": "^2.1",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
-        "symfony/phpunit-bridge": "^4.1"
+        "symfony/phpunit-bridge": "^4.1",
+        "symfony/web-server-bundle": "^4.1"
     },
     "config": {
         "preferred-install": {
