--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,8 +19,8 @@ services:
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    Oxidmod\Messages\Controller\:
-        resource: '../src/Controller'
+    Oxidmod\Messages\UserInterface\Web\:
+        resource: '../src/UserInterface/Web'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
