--- a/project/config/packages/doctrine.yaml
+++ b/project/config/packages/doctrine.yaml
@@ -1,21 +1,23 @@
 parameters:
-    # Adds a fallback DATABASE_URL if the env var is not set.
-    # This allows you to run cache:warmup even if your
-    # environment variables are not available yet.
-    # You should not need to change this value.
-    env(DATABASE_URL): ''
+    env(MYSQL_DATABASE): ''
+    env(MYSQL_HOST): ''
+    env(MYSQL_USER): ''
+    env(MYSQL_PASSWORD): ''
 
 doctrine:
     dbal:
         # configure these for your database server
         driver: 'pdo_mysql'
-        server_version: '5.7'
+        server_version: '8.0'
         charset: utf8
         default_table_options:
             charset: utf8
             collate: utf8_unicode_ci
 
-        url: '%env(resolve:DATABASE_URL)%'
+        dbname: '%env(resolve:MYSQL_DATABASE)%'
+        host: '%env(resolve:MYSQL_HOST)%'
+        user: '%env(resolve:MYSQL_USER)%'
+        password: '%env(resolve:MYSQL_PASSWORD)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
