--- a/project/composer.json
+++ b/project/composer.json
@@ -15,6 +15,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "league/tactician-bundle": "^1.1",
+        "symfony/contracts": "^1.1",
         "symfony/flex": "^1.6",
         "symfony/framework-bundle": "^4.1",
         "symfony/orm-pack": "^1.0",
